# ifplug-ng

./: Makefile  Makefile.am  PKGBUILD  bootstrap.sh  config.mk  configure.ac  ifplugd.spec.in
cmd/ifplugd/: Makefile  ifmonitor.h  ifplugd.c  nlapi.c  nlapi.h
cmd/ifplugstatus/: Makefile
conf/: Makefile.am  ifplugd.action  ifplugd.conf  ifplugd.init.in
doc/: Makefile.am  NEWS  README.SuSE  README.html.in  SUPPORTED_DRIVERS  style.css
include/: Makefile  interface.h
lib/: Makefile
lib/libinterface/: Makefile  interface.c
man/: Makefile  Makefile.am  ifplugd.8.xml.in  ifplugd.conf.5.xml.in  ifplugstatus.8.xml.in  ifstatus.8.xml.in  xmltoman.css  xmltoman.dtd  xmltoman.xsl
mk/: ifplug.mk
patches/: Makefile.am
src/: Makefile.am  ethtool-local.h  ifmonitor.c  ifplugd.c  ifplugstatus.c  ifstatus.c  interface.c  interface.h  nlapi.c  wireless.h
